--- a/src/components/Chatbot.css
+++ b/src/components/Chatbot.css
@@ -130,20 +130,36 @@ body {
 
 .chatbot-toggler {
     position: fixed;
-    bottom: 50px;
-    right: 85px;
+    bottom: 260px;
+    right: 50%; /* Initial position */
     outline: none;
     border: none;
+    height: 50px;
+    width: 50px;
     display: flex;
     cursor: pointer;
     align-items: center;
     justify-content: center;
-    transition: all 0.2s ease;
-}
+    border-radius: 50%;
+    /* background: #724ae8; */
+    transition: right 0.3s ease-in-out, transform 0.3s ease-in-out, opacity 0.3s ease-in-out; /* Smooth transition for right, transform, and opacity */
+  }
+  
+  body.show-chatbot .chatbot-toggler {
+    bottom: 35px;
+    opacity: 0.8; /* Adjust opacity when shown */
+    right: 35px; /* New position when show-chatbot is active */
+    /* You can uncomment the transform line if needed */
+    /* transform: rotate(90deg) scale(1.1); */
+  }
+  @media (max-width:767px) {
+    .chatbot-toggler {
+        bottom: 30px;
+    }
+    
+  }
 
-.chatbot-toggler {
-    transform: rotate(90deg);
-}
+
 .show-chatbot .chatbot-toggler{
     transform: initial;
 
